--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "gh-pages": "^4.0.0",
+    "lottie-react": "^2.3.1",
     "nodemailer": "^6.7.8",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
