--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webdecoded",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://tsaitsaichieh.github.io/portfoilo-react",
+  "homepage": "https://tsaitsaichieh.github.io/portfoilo-test",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
